--- a/help-section.html
+++ b/help-section.html
@@ -40,7 +40,7 @@
 						<div class="nav-project-container">	
 							<article>
 								<a href="help-section.html" class="image">
-									<img src="images/help-section-desktop-1440x900.jpg" alt="Image of Peapod Help Secion on desktop" />
+									<img src="images/help-section-desktop-1440x900.jpg" alt="Image of Peapod Help section on desktop" />
 								</a>
 								<div class="caption">
 									<p>Created new information architecture for Peapod Help section.</p>
@@ -71,7 +71,7 @@
 									<img src="images/tactile-otter-1440x900.jpg" alt="Image of participant who is visually impared touching a tactile exhibit at the Shedd Aquarium" />
 								</a>
 								<div class="caption">
-									<p>Helped provide recommendations to Shedd Aquarium for improving exhibit accessiblity.</p>
+									<p>Helped provide recommendations to Shedd Aquarium for improving exhibit accessibility.</p>
 									<ul class="actions">
 										<li><span class="button small">Details</span></li>
 									</ul>
@@ -96,12 +96,12 @@
 												<h1>Peapod Help Section</h1>
 												<p>Design &amp; Research</p>
 											</header>
-											<span class="image fit"><img src="images/help-section/help-section-desktop.jpg" alt="Image of Peapod Help section on dekstop" /></span>
+											<span class="image fit"><img src="images/help-section-desktop-1440x900.jpg" alt="Image of Peapod Help section on dekstop" /></span>
 											<h2>Summary</h2>
-											<p>As part of a complete overhaul of the Peapod website, I designed a new responsive Gateway page which resulted in reducing the bounce rate by 30%.</p>
+											<p>With the redesign of the Peapod website, the existing Help section became outdated. This presented the opportunity for me to consolidate articles and construct a new, optimal information architecture.</p>
 											<ul>
 												<li><strong>Role:</strong> UI/UX Designer</li>
-												<li><strong>Deliverables:</strong> Responsive gateway page</li>
+												<li><strong>Deliverables:</strong> Hi-fi interactive prototype</li>
 											</ul>
 										</div>
 									</section>
@@ -124,60 +124,48 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gateway/gateway-remote-user-testing.png" data-caption="Conducted remote user testing to find usability issues." class="image">
+									<a href="images/help-section/help-section-card-sort.jpg" data-caption="Conducted remote open cardsort to determine information architecture." class="image">
+										<img src="images/gallery/thumbs/help-section-cardsort2-thumb.jpg" alt="Remote user testing" />
+									</a>
+									<div class="caption">
+										<h3>Open Cardsort</h3>
+										<p>Conducted remote open cardsort to determine information architecture.</p>
+										<ul class="actions">
+											<li><span class="button small">Enlarge</span></li>
+										</ul>
+									</div>
+								</article>
+								<article>
+									<a href="images/help-section/help-section-card-sort-zoom.jpg" data-caption="Conducted remote open cardsort to determine information architecture." class="image">
 										<img src="images/gallery/thumbs/help-section-cardsort1-thumb.jpg" alt="Remote user testing" />
 									</a>
 									<div class="caption">
 										<h3>Open Cardsort</h3>
-										<p>Conducted remote user testing to find usability issues.</p>
+										<p>Conducted remote open cardsort to determine information architecture.</p>
 										<ul class="actions">
 											<li><span class="button small">Enlarge</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gateway/gateway-mobile-breakpoint.png" data-caption="Screenshot of mobile breakpoint." class="image">
-										<img src="images/gallery/thumbs/gateway-mobile-thumb.jpg" alt="Test2" />
+									<a href="images/help-section/help-section-sketch.jpg" data-caption="Sketch layout before designing high fidelity" class="image">
+										<img src="images/gallery/thumbs/help-section-sketch-thumb.jpg" alt="Test2" />
 									</a>
 									<div class="caption">
-										<h3>Mobile Breakpoint</h3>
-										<p>Screenshot of mobile breakpoint.</p>
+										<h3>Sketched Layout</h3>
+										<p>Sketch layout before designing high fidelity</p>
 										<ul class="actions">
 											<li><span class="button small">Enlarge</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gateway/gateway-desktop.png" data-caption="Screenshot of deskotp breakpoint." class="image">
-										<img src="images/gallery/thumbs/gateway-desktop-thumb.jpg" alt="Test2" />
+									<a href="images/help-section/help-section-screencap.jpg" data-caption="Screenshot of Help section on desktop." class="image">
+										<img src="images/gallery/thumbs/help-section-screencap-thumb.jpg" alt="Test2" />
 									</a>
 									<div class="caption">
-										<h3>Desktop Breakpoint</h3>
-										<p>Screenshot of deskotp breakpoint.</p>
-										<ul class="actions">
-											<li><span class="button small">Enlarge</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gateway/gateway-mobile.jpg" data-caption="Peapod gateway page on a mobile device." class="image">
-										<img src="images/gallery/thumbs/gateway-mobile-device-thumb.jpg" alt="Test2" />
-									</a>
-									<div class="caption">
-										<h3>Peapod Mobile</h3>
-										<p>Peapod gateway page on a mobile device.</p>
-										<ul class="actions">
-											<li><span class="button small">Enlarge</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gateway/gateway-tablet.jpg" data-caption="Peapod gateway page on a tablet." class="image">
-										<img src="images/gallery/thumbs/gateway-tablet-thumb.jpg" alt="Test2" />
-									</a>
-									<div class="caption">
-										<h3>Peapod Tablet</h3>
-										<p>Peapod gateway page on a tablet.</p>
+										<h3>Desktop</h3>
+										<p>Screenshot of Help section on desktop</p>
 										<ul class="actions">
 											<li><span class="button small">Enlarge</span></li>
 										</ul>
@@ -191,14 +179,28 @@
 						<div class="inner medium">
 							<h2>Design Problem</h2>
 							<ul>
-								<li><strong>Lorem Ipsum</strong> Lorem Ipsum</li>
-								<li><strong>Deliverables:</strong> Lorem Ipsum</li>
+								<li>Existing help section lacked proper hierarchy of information</li>
+								<li>Exiting help section had redundant or out of date articles</li>
+								<li>Users were not able to search help articles</li>
+								<li>New help section must must support mobile, mini-tablet, tablet &amp; desktop</li>
 							</ul>
 							<h2>Methods</h2>
 							<div class="items style1 medium align-center onscroll-fade-in">
 								<section>
-									<span class="icon style2 major fa-object-ungroup"></span>
-									<h3>Wireframing</h3>
+									<span class="icon style2 major fa-desktop"></span>
+									<h3>Heuristic Evaluation</h3>
+								</section>
+								<section>
+									<span class="icon style2 major fa-group"></span>
+									<h3>Observations</h3>
+								</section>
+								<section>
+									<span class="icon style2 major fa-th"></span>
+									<h3>Card Sorting</h3>
+								</section>
+								<section>
+									<span class="icon style2 major  fa-pencil"></span>
+									<h3>Sketching</h3>
 								</section>
 								<section>
 									<span class="icon style2 major fa-object-group"></span>
@@ -208,64 +210,21 @@
 									<span class="icon style2 major fa-user"></span>
 									<h3>User Testing</h3>
 								</section>
-								<section>
-									<span class="icon style2 major fa-comments-o"></span>
-									<h3>Interviews</h3>
-								</section>
-								<section>
-									<span class="icon style2 major fa-search"></span>
-									<h3>Contextual Inquiry</h3>
-								</section>
-								<section>
-									<span class="icon style2 major fa-group"></span>
-									<h3>Observations</h3>
-								</section>
-								<section>
-									<span class="icon style2 major fa-desktop"></span>
-									<h3>Heuristic &amp; Accessibility Evaluations</h3>
-								</section>
-								<section>
-									<span class="icon style2 major  fa-copy"></span>
-									<h3>Competitive Analysis</h3>
-								</section>
-								<section>
-									<span class="icon style2 major fa-pencil-square-o"></span>
-									<h3>Storyboarding</h3>
-								</section>
-								<section>
-									<span class="icon style2 major fa-th"></span>
-									<h3>Card Sorting</h3>
-								</section>
-								<section>
-									<span class="icon style2 major fa-map-o"></span>
-									<h3>Journey Mapping</h3>
-								</section>
-								<section>
-									<span class="icon style2 major fa-sitemap"></span>
-									<h3>Affinity Diagramming</h3>
-								</section>
-								<section>
-									<span class="icon style2 major  fa-pencil"></span>
-									<h3>Sketching</h3>
-								</section>
-								<section>
-									<span class="icon style2 major fa-pie-chart"></span>
-									<h3>Surveys</h3>
-								</section>
-								<section>
-									<span class="icon style2 major fa-book"></span>
-									<h3>Literature Review</h3>
-								</section>
 							</div>
 							<h2>Results</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend fringilla ex, vel sodales justo egestas vel. Nam venenatis fermentum sapien, et congue lorem porta eget. Cras nec malesuada arcu, non vulputate leo. Proin finibus mattis luctus. Nullam tincidunt quam vitae varius elementum. Donec ultrices, est non congue hendrerit, massa felis pulvinar risus, a mollis sem tortor vitae libero. Donec nibh quam, ornare eget volutpat vitae, tempus sagittis mauris.</p>
+							<ul>
+								<li>New help section has a hierarchy of information that is more logical to users</li>
+								<li>Users are able to search and browse help articles</li>
+								<li>New help section's fluid layout supports mobile, mini-tablet, tablet &amp; desktop</li>
+							</ul>
 						</div>
 					</section>
 
 				<!-- Email Form -->
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
-							<h2>Get in touch</h2>
+							<h2>Get in Touch</h2>
+							<p>Feel free to reach out to me regarding work opportunities. You may also find me on <a href="https://www.linkedin.com/in/tkbernardo/" target="_blank">LinkedIn</a>.</p>
 							<form method="post" action="//formspree.io/tkbernardo@gmail.com">
 								<div class="field half first">
 									<label for="name">Name</label>
