--- a/ice-burg.html
+++ b/ice-burg.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 	<head>
-		<title>Tristan Bernardo | UI/UX Designer: Peapod Gateway Page</title>
+		<title>Tristan Bernardo | UI/UX Designer: Ice-Burg Project</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -40,7 +40,7 @@
 						<div class="nav-project-container">	
 							<article>
 								<a href="help-section.html" class="image">
-									<img src="images/help-section-desktop-1440x900.jpg" alt="Image of Peapod Help Secion on desktop" />
+									<img src="images/help-section-desktop-1440x900.jpg" alt="Image of Peapod Help section on desktop" />
 								</a>
 								<div class="caption">
 									<p>Created new information architecture for Peapod Help section.</p>
@@ -71,7 +71,7 @@
 									<img src="images/tactile-otter-1440x900.jpg" alt="Image of participant who is visually impared touching a tactile exhibit at the Shedd Aquarium" />
 								</a>
 								<div class="caption">
-									<p>Helped provide recommendations to Shedd Aquarium for improving exhibit accessiblity.</p>
+									<p>Helped provide recommendations to Shedd Aquarium for improving exhibit accessibility.</p>
 									<ul class="actions">
 										<li><span class="button small">Details</span></li>
 									</ul>
@@ -93,15 +93,15 @@
 									<section class="banner onload-content-fade-right">
 										<div class="content">
 											<header>
-												<h1>Peapod Gateway Page</h1>
+												<h1>Ice-Burg Project</h1>
 												<p>Design &amp; Research</p>
 											</header>
-											<span class="image fit"><img src="images/gateway-mobile-1440x900.jpg" alt="Image of Peapod Gateway on a mobile device" /></span>
+											<span class="image fit"><img src="images/touching-ice-burg-1440x900.jpg" alt="Image of Peapod Gateway on a mobile device" /></span>
 											<h2>Summary</h2>
-											<p>As part of a complete overhaul of the Peapod website, I designed a new responsive Gateway page which resulted in reducing the bounce rate by 30%.</p>
+											<p>I was part of a team that won a grant to created an <a href="https://drive.google.com/file/d/0B0B_W6bUJMLYUm5odndxbUczR1k/view?usp=sharing" target="_blank">interactive art installation</a> entitled "Ice-Burg", that responds to proximity and touch by engaging the user with music and lights. Ice-Burg explores the concept of placemaking in public spaces by encouraging interactions and connecting people who would otherwise not know each other.</p>
 											<ul>
-												<li><strong>Role:</strong> UI/UX Designer</li>
-												<li><strong>Deliverables:</strong> Responsive gateway page</li>
+												<li><strong>Role:</strong> Design Lead (fabrication), Scrum Master</li>
+												<li><strong>Deliverables:</strong> <a href="https://drive.google.com/file/d/0B1doyfzA9kezdEVSNWlVN0dxN00/view" target="_blank">Decision Table</a>, <a href="https://drive.google.com/file/d/0B1doyfzA9kezZ3ZsWW1xemJJXzA/view" target="_blank">Data Flow Diagram</a>, <a href="https://www.youtube.com/watch?v=VUIrc_OMx3c" target="_blank">Interactive sculptures</a></li>
 											</ul>
 										</div>
 									</section>
@@ -191,54 +191,19 @@
 						<div class="inner medium">
 							<h2>Design Problem</h2>
 							<ul>
-								<li><strong>Lorem Ipsum</strong> Lorem Ipsum</li>
-								<li><strong>Deliverables:</strong> Lorem Ipsum</li>
+								<li>Materials must not exceed $500</li>
+								<li>Scupltures must respond to user proximity, touch, as well as relay inputs to corresponding sculpture</li>
+								<li>Must have a working prototype within a twelve week time span</li>
 							</ul>
 							<h2>Methods</h2>
 							<div class="items style1 medium align-center onscroll-fade-in">
-								<section>
-									<span class="icon style2 major fa-object-ungroup"></span>
-									<h3>Wireframing</h3>
-								</section>
-								<section>
-									<span class="icon style2 major fa-object-group"></span>
-									<h3>Prototyping</h3>
-								</section>
-								<section>
-									<span class="icon style2 major fa-user"></span>
-									<h3>User Testing</h3>
-								</section>
-								<section>
-									<span class="icon style2 major fa-comments-o"></span>
-									<h3>Interviews</h3>
-								</section>
-								<section>
-									<span class="icon style2 major fa-search"></span>
-									<h3>Contextual Inquiry</h3>
-								</section>
-								<section>
-									<span class="icon style2 major fa-group"></span>
-									<h3>Observations</h3>
-								</section>
-								<section>
-									<span class="icon style2 major fa-desktop"></span>
-									<h3>Heuristic &amp; Accessibility Evaluations</h3>
-								</section>
-								<section>
-									<span class="icon style2 major  fa-copy"></span>
-									<h3>Competitive Analysis</h3>
-								</section>
 								<section>
 									<span class="icon style2 major fa-pencil-square-o"></span>
 									<h3>Storyboarding</h3>
 								</section>
 								<section>
-									<span class="icon style2 major fa-th"></span>
-									<h3>Card Sorting</h3>
-								</section>
-								<section>
-									<span class="icon style2 major fa-map-o"></span>
-									<h3>Journey Mapping</h3>
+									<span class="icon style2 major fa-group"></span>
+									<h3>Observations</h3>
 								</section>
 								<section>
 									<span class="icon style2 major fa-sitemap"></span>
@@ -249,23 +214,27 @@
 									<h3>Sketching</h3>
 								</section>
 								<section>
-									<span class="icon style2 major fa-pie-chart"></span>
-									<h3>Surveys</h3>
+									<span class="icon style2 major fa-object-group"></span>
+									<h3>Prototyping</h3>
 								</section>
 								<section>
-									<span class="icon style2 major fa-book"></span>
-									<h3>Literature Review</h3>
+									<span class="icon style2 major fa-user"></span>
+									<h3>User Testing</h3>
 								</section>
 							</div>
 							<h2>Results</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend fringilla ex, vel sodales justo egestas vel. Nam venenatis fermentum sapien, et congue lorem porta eget. Cras nec malesuada arcu, non vulputate leo. Proin finibus mattis luctus. Nullam tincidunt quam vitae varius elementum. Donec ultrices, est non congue hendrerit, massa felis pulvinar risus, a mollis sem tortor vitae libero. Donec nibh quam, ornare eget volutpat vitae, tempus sagittis mauris.</p>
+							<ul>
+								<li>We were able to create a functional life size prototype</li>
+								<li>One of the most challenging and rewarding projects I've ever worked on</li>
+							</ul>
 						</div>
 					</section>
 
 				<!-- Email Form -->
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
-							<h2>Get in touch</h2>
+							<h2>Get in Touch</h2>
+							<p>Feel free to reach out to me regarding work opportunities. You may also find me on <a href="https://www.linkedin.com/in/tkbernardo/" target="_blank">LinkedIn</a>.</p>
 							<form method="post" action="//formspree.io/tkbernardo@gmail.com">
 								<div class="field half first">
 									<label for="name">Name</label>
