--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<div class="nav-project-container">	
 							<article>
 								<a href="help-section.html" class="image">
-									<img src="images/help-section-desktop-1440x900.jpg" alt="Image of Peapod Help Secion on desktop" />
+									<img src="images/help-section-desktop-1440x900.jpg" alt="Image of Peapod Help secion on desktop" />
 								</a>
 								<div class="caption">
 									<p>Created new information architecture for Peapod Help section.</p>
@@ -70,7 +70,7 @@
 									<img src="images/tactile-otter-1440x900.jpg" alt="Image of participant who is visually impared touching a tactile exhibit at the Shedd Aquarium" />
 								</a>
 								<div class="caption">
-									<p>Helped provide recommendations to Shedd Aquarium for improving exhibit accessiblity.</p>
+									<p>Helped provide recommendations to Shedd Aquarium for improving exhibit accessibility.</p>
 									<ul class="actions">
 										<li><span class="button small">Details</span></li>
 									</ul>
@@ -108,7 +108,7 @@
 							<h2>Peapod Gateway Page</h2>
 							<p>As part of a complete overhaul of the Peapod website, I designed a new responsive Gateway page which resulted in reducing the bounce rate by 30%.</p>
 							<ul class="actions vertical">
-								<li><a href="gateway.html" class="button big wide">Learn More</a></li>
+								<li><a href="gateway.html" class="button big wide">Details</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -122,11 +122,11 @@
 							<h2>Peapod Help Section</h2>
 							<p>With the redesign of the Peapod website, the existing Help section became outdated. This presented the opportunity for me to consolidate articles and construct a new, optimal information architecture.</p>
 							<ul class="actions vertical">
-								<li><a href="help-section.html" class="button big wide">Learn More</a></li>
+								<li><a href="help-section.html" class="button big wide">Details</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/help-section-desktop-1440x900.jpg" alt="Image of Peapod Help Secion on desktop" />
+							<img src="images/help-section-desktop-1440x900.jpg" alt="Image of Peapod Help Section on desktop" />
 						</div>
 					</section>
 
@@ -134,9 +134,9 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Ice-Burg Project</h2>
-							<p>I was part of a team that won a grant to created an interactive art installation, that responds to proximity and touch by engaging the user with music and lights.</p>
+							<p>I was part of a team that won a grant to created an interactive art installation entitled "Ice-Burg", that responds to proximity and touch by engaging the user with music and lights. Ice-Burg explores the concept of placemaking in public spaces by encouraging interactions and connecting people who would otherwise not know each other.</p>
 							<ul class="actions vertical">
-								<li><a href="ice-burg.html" class="button big wide">Learn More</a></li>
+								<li><a href="ice-burg.html" class="button big wide">Details</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -150,7 +150,7 @@
 							<h2>Shedd Aquarium Accessibility</h2>
 							<p>Currently most museums do not design their exhibits to accommodate visitors with disabilities, particularly those with visual impairments. I was part of a team that investigated this problem space, and provided recommendations for improvement to the Shedd Aquarium in Chicago.</p>
 							<ul class="actions vertical">
-								<li><a href="shedd-aquarium.html" class="button big wide">Learn More</a></li>
+								<li><a href="shedd-aquarium.html" class="button big wide">Details</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -180,7 +180,6 @@
 									<li><input type="submit" name="submit" id="submit" value="Send Message" class="big wide" /></li>
 								</ul>
 							</form>
-
 						</div>
 					</section>
 
