--- a/shedd-aquarium.html
+++ b/shedd-aquarium.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 	<head>
-		<title>Tristan Bernardo | UI/UX Designer: Peapod Gateway Page</title>
+		<title>Tristan Bernardo | UI/UX Designer: Shedd Aquarium Accessibility</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -40,7 +40,7 @@
 						<div class="nav-project-container">	
 							<article>
 								<a href="help-section.html" class="image">
-									<img src="images/help-section-desktop-1440x900.jpg" alt="Image of Peapod Help Secion on desktop" />
+									<img src="images/help-section-desktop-1440x900.jpg" alt="Image of Peapod Help section on desktop" />
 								</a>
 								<div class="caption">
 									<p>Created new information architecture for Peapod Help section.</p>
@@ -71,7 +71,7 @@
 									<img src="images/tactile-otter-1440x900.jpg" alt="Image of participant who is visually impared touching a tactile exhibit at the Shedd Aquarium" />
 								</a>
 								<div class="caption">
-									<p>Helped provide recommendations to Shedd Aquarium for improving exhibit accessiblity.</p>
+									<p>Helped provide recommendations to Shedd Aquarium for improving exhibit accessibility.</p>
 									<ul class="actions">
 										<li><span class="button small">Details</span></li>
 									</ul>
@@ -93,15 +93,15 @@
 									<section class="banner onload-content-fade-right">
 										<div class="content">
 											<header>
-												<h1>Peapod Gateway Page</h1>
-												<p>Design &amp; Research</p>
+												<h1>Shedd Aquarium Accessibility</h1>
+												<p>Research</p>
 											</header>
-											<span class="image fit"><img src="images/gateway-mobile-1440x900.jpg" alt="Image of Peapod Gateway on a mobile device" /></span>
+											<span class="image fit"><img src="images/tactile-otter-1440x900.jpg" alt="Image of Peapod Gateway on a mobile device" /></span>
 											<h2>Summary</h2>
-											<p>As part of a complete overhaul of the Peapod website, I designed a new responsive Gateway page which resulted in reducing the bounce rate by 30%.</p>
+											<p>Currently most museums do not design their exhibits to accommodate visitors with disabilities, particularly those with visual impairments. I was part of a team that investigated this problem space, and provided recommendations for improvement to the Shedd Aquarium in Chicago.</p>
 											<ul>
-												<li><strong>Role:</strong> UI/UX Designer</li>
-												<li><strong>Deliverables:</strong> Responsive gateway page</li>
+												<li><strong>Role:</strong> Moderator, Guide</li>
+												<li><strong>Deliverables:</strong> <a href="https://drive.google.com/file/d/0B1doyfzA9kezVmUxRlZfRDlDbzA/view" target="_blank">Accessibility Report</a>, <a href="https://docs.google.com/presentation/d/1VQFPk5PR9gTSCMuiYOozoOcWVVr1evjHA13kxkKJ5Lo/edit?usp=sharing" target="_blank">Presentation</a></li>
 											</ul>
 										</div>
 									</section>
@@ -189,24 +189,22 @@
 				<!-- Process -->
 					<section class="wrapper style1 align-left">
 						<div class="inner medium">
-							<h2>Design Problem</h2>
+							<h2>Problem Space</h2>
 							<ul>
-								<li><strong>Lorem Ipsum</strong> Lorem Ipsum</li>
-								<li><strong>Deliverables:</strong> Lorem Ipsum</li>
+								<li>Many museums are inaccessible</li>
+								<li>Exhibitions are designed for sighted visitors</li>
+								<li>Lack of braille information/audio descriptions</li>
+								<li>Research on accessibility in aquariums is limited</li>
 							</ul>
 							<h2>Methods</h2>
 							<div class="items style1 medium align-center onscroll-fade-in">
 								<section>
-									<span class="icon style2 major fa-object-ungroup"></span>
-									<h3>Wireframing</h3>
+									<span class="icon style2 major fa-book"></span>
+									<h3>Literature Review</h3>
 								</section>
 								<section>
-									<span class="icon style2 major fa-object-group"></span>
-									<h3>Prototyping</h3>
-								</section>
-								<section>
-									<span class="icon style2 major fa-user"></span>
-									<h3>User Testing</h3>
+									<span class="icon style2 major  fa-copy"></span>
+									<h3>Competitive Analysis</h3>
 								</section>
 								<section>
 									<span class="icon style2 major fa-comments-o"></span>
@@ -222,50 +220,35 @@
 								</section>
 								<section>
 									<span class="icon style2 major fa-desktop"></span>
-									<h3>Heuristic &amp; Accessibility Evaluations</h3>
-								</section>
-								<section>
-									<span class="icon style2 major  fa-copy"></span>
-									<h3>Competitive Analysis</h3>
-								</section>
-								<section>
-									<span class="icon style2 major fa-pencil-square-o"></span>
-									<h3>Storyboarding</h3>
-								</section>
-								<section>
-									<span class="icon style2 major fa-th"></span>
-									<h3>Card Sorting</h3>
-								</section>
-								<section>
-									<span class="icon style2 major fa-map-o"></span>
-									<h3>Journey Mapping</h3>
-								</section>
-								<section>
-									<span class="icon style2 major fa-sitemap"></span>
-									<h3>Affinity Diagramming</h3>
-								</section>
-								<section>
-									<span class="icon style2 major  fa-pencil"></span>
-									<h3>Sketching</h3>
-								</section>
-								<section>
-									<span class="icon style2 major fa-pie-chart"></span>
-									<h3>Surveys</h3>
-								</section>
-								<section>
-									<span class="icon style2 major fa-book"></span>
-									<h3>Literature Review</h3>
+									<h3>Accessibility Evaluation</h3>
 								</section>
 							</div>
-							<h2>Results</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend fringilla ex, vel sodales justo egestas vel. Nam venenatis fermentum sapien, et congue lorem porta eget. Cras nec malesuada arcu, non vulputate leo. Proin finibus mattis luctus. Nullam tincidunt quam vitae varius elementum. Donec ultrices, est non congue hendrerit, massa felis pulvinar risus, a mollis sem tortor vitae libero. Donec nibh quam, ornare eget volutpat vitae, tempus sagittis mauris.</p>
+							<h2>Findings</h2>
+							<ul>
+								<li>Museum staff were not knowledgeable of assistive technology, and lacked exposure to people with disabilities</li>
+								<li>Audio descriptions keep visitors engaged and are enjoyable</li>
+								<li>Current AD setup at Shedd Aquarium is effective</li>
+								<li>In exhibit design sounds create a sense of space</li>
+								<li>Information signage is not accessible</li>
+								<li>Tactile elements help learning and knowledge retention</li>
+							</ul>
+							<h2>Recommendations</h2>
+							<ul>
+								<li>Provide Assitive Technology (AT) training, and contact with people with disabilities for staff</li>
+								<li>Provide domain training for Audio Describers</li>
+								<li>Conducted advanced research on exhibits</li>
+								<li>Audio Describers should use a general to specific approach. Less is more</li>
+								<li>Design exhibits with multi-modal sensory information</li>
+								<li>Use braille for brief text information and AD for longer text information</li>
+							</ul>
 						</div>
 					</section>
 
 				<!-- Email Form -->
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
-							<h2>Get in touch</h2>
+							<h2>Get in Touch</h2>
+							<p>Feel free to reach out to me regarding work opportunities. You may also find me on <a href="https://www.linkedin.com/in/tkbernardo/" target="_blank">LinkedIn</a>.</p>
 							<form method="post" action="//formspree.io/tkbernardo@gmail.com">
 								<div class="field half first">
 									<label for="name">Name</label>
