--- a/gateway.html
+++ b/gateway.html
@@ -40,7 +40,7 @@
 						<div class="nav-project-container">	
 							<article>
 								<a href="help-section.html" class="image">
-									<img src="images/help-section-desktop-1440x900.jpg" alt="Image of Peapod Help Secion on desktop" />
+									<img src="images/help-section-desktop-1440x900.jpg" alt="Image of Peapod Help section on desktop" />
 								</a>
 								<div class="caption">
 									<p>Created new information architecture for Peapod Help section.</p>
@@ -71,7 +71,7 @@
 									<img src="images/tactile-otter-1440x900.jpg" alt="Image of participant who is visually impared touching a tactile exhibit at the Shedd Aquarium" />
 								</a>
 								<div class="caption">
-									<p>Helped provide recommendations to Shedd Aquarium for improving exhibit accessiblity.</p>
+									<p>Helped provide recommendations to Shedd Aquarium for improving exhibit accessibility.</p>
 									<ul class="actions">
 										<li><span class="button small">Details</span></li>
 									</ul>
@@ -101,7 +101,7 @@
 											<p>As part of a complete overhaul of the Peapod website, I designed a new responsive Gateway page which resulted in reducing the bounce rate by 30%.</p>
 											<ul>
 												<li><strong>Role:</strong> UI/UX Designer</li>
-												<li><strong>Deliverables:</strong> Responsive gateway page</li>
+												<li><strong>Deliverables:</strong> Hi-fi interactive prototype for four breakpoints</li>
 											</ul>
 										</div>
 									</section>
@@ -136,24 +136,24 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gateway/gateway-mobile-breakpoint.png" data-caption="Screenshot of mobile breakpoint." class="image">
-										<img src="images/gallery/thumbs/gateway-mobile-thumb.jpg" alt="Test2" />
+									<a href="images/gateway/gateway-mobile-breakpoint.png" data-caption="Screenshot of Peapod Gateway on mobile." class="image">
+										<img src="images/gallery/thumbs/gateway-mobile-thumb.jpg" alt="Screenshot of Peapod Gateway on mobile" />
 									</a>
 									<div class="caption">
-										<h3>Mobile Breakpoint</h3>
-										<p>Screenshot of mobile breakpoint.</p>
+										<h3>Mobile</h3>
+										<p>Screenshot of Peapod Gateway on mobile</p>
 										<ul class="actions">
 											<li><span class="button small">Enlarge</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gateway/gateway-desktop.png" data-caption="Screenshot of deskotp breakpoint." class="image">
-										<img src="images/gallery/thumbs/gateway-desktop-thumb.jpg" alt="Test2" />
+									<a href="images/gateway/gateway-desktop.png" data-caption="Screenshot of Peapod Gateway on desktop" class="image">
+										<img src="images/gallery/thumbs/gateway-desktop-thumb.jpg" alt="Screenshot of Peapod Gateway page on desktop" />
 									</a>
 									<div class="caption">
-										<h3>Desktop Breakpoint</h3>
-										<p>Screenshot of deskotp breakpoint.</p>
+										<h3>Desktop</h3>
+										<p>Screenshot of Peapod Gateway page on desktop</p>
 										<ul class="actions">
 											<li><span class="button small">Enlarge</span></li>
 										</ul>
@@ -161,11 +161,11 @@
 								</article>
 								<article>
 									<a href="images/gateway/gateway-mobile.jpg" data-caption="Peapod gateway page on a mobile device." class="image">
-										<img src="images/gallery/thumbs/gateway-mobile-device-thumb.jpg" alt="Test2" />
+										<img src="images/gallery/thumbs/gateway-mobile-device-thumb.jpg" alt="Image of Peapod Gateway page on a mobile device." />
 									</a>
 									<div class="caption">
 										<h3>Peapod Mobile</h3>
-										<p>Peapod gateway page on a mobile device.</p>
+										<p>Peapod Gateway page on a mobile device.</p>
 										<ul class="actions">
 											<li><span class="button small">Enlarge</span></li>
 										</ul>
@@ -173,7 +173,7 @@
 								</article>
 								<article>
 									<a href="images/gateway/gateway-tablet.jpg" data-caption="Peapod gateway page on a tablet." class="image">
-										<img src="images/gallery/thumbs/gateway-tablet-thumb.jpg" alt="Test2" />
+										<img src="images/gallery/thumbs/gateway-tablet-thumb.jpg" alt="Image of Peapod Gateway page on a tablet." />
 									</a>
 									<div class="caption">
 										<h3>Peapod Tablet</h3>
@@ -191,81 +191,52 @@
 						<div class="inner medium">
 							<h2>Design Problem</h2>
 							<ul>
-								<li><strong>Lorem Ipsum</strong> Lorem Ipsum</li>
-								<li><strong>Deliverables:</strong> Lorem Ipsum</li>
+								<li>Existing gateway page had a high bounce rate of 80%</li>
+								<li>New gateway page must get visitors into the site with minimal resistance
+								<li>New gateway page must support mobile, mini-tablet, tablet &amp; desktop</li>
+								<li>New gateway page must support dynamic promotional content</li>
 							</ul>
 							<h2>Methods</h2>
 							<div class="items style1 medium align-center onscroll-fade-in">
 								<section>
-									<span class="icon style2 major fa-object-ungroup"></span>
-									<h3>Wireframing</h3>
-								</section>
-								<section>
-									<span class="icon style2 major fa-object-group"></span>
-									<h3>Prototyping</h3>
-								</section>
-								<section>
-									<span class="icon style2 major fa-user"></span>
-									<h3>User Testing</h3>
-								</section>
-								<section>
-									<span class="icon style2 major fa-comments-o"></span>
-									<h3>Interviews</h3>
-								</section>
-								<section>
-									<span class="icon style2 major fa-search"></span>
-									<h3>Contextual Inquiry</h3>
-								</section>
-								<section>
-									<span class="icon style2 major fa-group"></span>
-									<h3>Observations</h3>
-								</section>
-								<section>
 									<span class="icon style2 major fa-desktop"></span>
-									<h3>Heuristic &amp; Accessibility Evaluations</h3>
+									<h3>Heuristic Evaluation</h3>
 								</section>
 								<section>
 									<span class="icon style2 major  fa-copy"></span>
 									<h3>Competitive Analysis</h3>
 								</section>
 								<section>
-									<span class="icon style2 major fa-pencil-square-o"></span>
-									<h3>Storyboarding</h3>
+									<span class="icon style2 major fa-user"></span>
+									<h3>User Testing</h3>
 								</section>
 								<section>
-									<span class="icon style2 major fa-th"></span>
-									<h3>Card Sorting</h3>
-								</section>
-								<section>
-									<span class="icon style2 major fa-map-o"></span>
-									<h3>Journey Mapping</h3>
-								</section>
-								<section>
-									<span class="icon style2 major fa-sitemap"></span>
-									<h3>Affinity Diagramming</h3>
+									<span class="icon style2 major fa-group"></span>
+									<h3>Observations</h3>
 								</section>
 								<section>
 									<span class="icon style2 major  fa-pencil"></span>
 									<h3>Sketching</h3>
 								</section>
 								<section>
-									<span class="icon style2 major fa-pie-chart"></span>
-									<h3>Surveys</h3>
-								</section>
-								<section>
-									<span class="icon style2 major fa-book"></span>
-									<h3>Literature Review</h3>
+									<span class="icon style2 major fa-object-group"></span>
+									<h3>Prototyping</h3>
 								</section>
 							</div>
 							<h2>Results</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend fringilla ex, vel sodales justo egestas vel. Nam venenatis fermentum sapien, et congue lorem porta eget. Cras nec malesuada arcu, non vulputate leo. Proin finibus mattis luctus. Nullam tincidunt quam vitae varius elementum. Donec ultrices, est non congue hendrerit, massa felis pulvinar risus, a mollis sem tortor vitae libero. Donec nibh quam, ornare eget volutpat vitae, tempus sagittis mauris.</p>
+							<ul>
+								<li>Layout of the new gateway page follows standard design pattern for login screens</li>
+								<li>New gatewate page's fluid layout supports mobile, mini-tablet, tablet &amp; desktop</li>
+								<li>Bounce rate was reduced by 30%</li>
+							</ul>
 						</div>
 					</section>
 
 				<!-- Email Form -->
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
-							<h2>Get in touch</h2>
+							<h2>Get in Touch</h2>
+							<p>Feel free to reach out to me regarding work opportunities. You may also find me on <a href="https://www.linkedin.com/in/tkbernardo/" target="_blank">LinkedIn</a>.</p>
 							<form method="post" action="//formspree.io/tkbernardo@gmail.com">
 								<div class="field half first">
 									<label for="name">Name</label>
