--- a/about.html
+++ b/about.html
@@ -120,48 +120,48 @@
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
-									<a href="images/gallery/fulls/01.jpg" data-caption="Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices" class="image">
-										<img src="images/gallery/thumbs/01.jpg" alt="Test1" />
+									<a href="gateway.html" class="image">
+										<img src="images/gallery/thumbs/gateway-mobile-device-thumb.jpg" alt="Image of Peapod Gateway on a mobile device" />
 									</a>
 									<div class="caption">
-										<h3>Ipsum Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Peapod Gateway Page</h3>
+										<p>Redesigned Peapod Gateway page for desktop and mobile.</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/02.jpg" data-caption="Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices" class="image">
-										<img src="images/gallery/thumbs/02.jpg" alt="Test2" />
+									<a href="help-section.html" class="image">
+										<img src="images/gallery/thumbs/help-section-desktop-thumb.jpg" alt="Image of Peapod Help secion on desktop" />
 									</a>
 									<div class="caption">
-										<h3>Feugiat Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Peapod Help Section</h3>
+										<p>Created new information architecture for Peapod Help section.</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/02.jpg" data-caption="Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices" class="image">
-										<img src="images/gallery/thumbs/02.jpg" alt="Test2" />
+									<a href="ice-burg.html" class="image">
+										<img src="images/gallery/thumbs/touching-ice-burg-thumb.jpg" alt="Image of girl touching illuminated sculpture" />
 									</a>
 									<div class="caption">
-										<h3>Feugiat Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Ice-Burg Project</h3>
+										<p>Helped create interactive art installation that responds to proximity and touch.</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/02.jpg" data-caption="Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices" class="image">
-										<img src="images/gallery/thumbs/02.jpg" alt="Test2" />
+									<a href="shedd-aquarium.html" class="image">
+										<img src="images/gallery/thumbs/tactile-otter-thumb.jpg" alt="Image of participant who is visually impared touching a tactile exhibit at the Shedd Aquarium" />
 									</a>
 									<div class="caption">
-										<h3>Feugiat Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Shedd Aquarium Accessiblity</h3>
+										<p>Helped provide recommendations to Shedd Aquarium for improving exhibit accessiblity.</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
 										</ul>
