--- a/ice-burg.html
+++ b/ice-burg.html
@@ -98,7 +98,7 @@
 											</header>
 											<span class="image fit"><img src="images/touching-ice-burg-1440x900.jpg" alt="Image of Peapod Gateway on a mobile device" /></span>
 											<h2>Summary</h2>
-											<p>I was part of a team that won a grant to created an <a href="https://drive.google.com/file/d/0B0B_W6bUJMLYUm5odndxbUczR1k/view?usp=sharing" target="_blank">interactive art installation</a> entitled "Ice-Burg", that responds to proximity and touch by engaging the user with music and lights. Ice-Burg explores the concept of placemaking in public spaces by encouraging interactions and connecting people who would otherwise not know each other.</p>
+											<p>I was part of a team that won a grant to created an <a href="https://drive.google.com/file/d/0B0B_W6bUJMLYUm5odndxbUczR1k/view?usp=sharing" target="_blank">interactive art installation</a> that we called "Ice-Burg", which responds to proximity and touch by engaging the user with music and lights. Ice-Burg explores the concept of placemaking in public spaces by encouraging interactions and connecting people who would otherwise not know each other.</p>
 											<ul>
 												<li><strong>Role:</strong> Design Lead (fabrication), Scrum Master</li>
 												<li><strong>Deliverables:</strong> <a href="https://drive.google.com/file/d/0B1doyfzA9kezdEVSNWlVN0dxN00/view" target="_blank">Decision Table</a>, <a href="https://drive.google.com/file/d/0B1doyfzA9kezZ3ZsWW1xemJJXzA/view" target="_blank">Data Flow Diagram</a>, <a href="https://www.youtube.com/watch?v=VUIrc_OMx3c" target="_blank">Interactive sculptures</a></li>
@@ -262,7 +262,7 @@
 								<li><a href="http://www.linkedin.com/in/tkbdesign" target="_blank" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="mailto:tkbernardo@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
-							<p>Copyright &copy; 2017 Tristan Bernardo</p>
+							<p>Copyright &copy; 2018 Tristan Bernardo</p>
 						</div>
 					</footer>
 			</div>
